--- a/spago.yaml
+++ b/spago.yaml
@@ -7,13 +7,13 @@ package:
       githubOwner: purescript-contrib
       githubRepo: purescript-form-urlencoded
   dependencies:
-    - foldable-traversable
-    - js-uri
-    - maybe
-    - newtype
-    - prelude
-    - strings
-    - tuples
+    - foldable-traversable: ">=6.0.0 <7.0.0"
+    - js-uri: ">=3.1.0 <4.0.0"
+    - maybe: ">=6.0.0 <7.0.0"
+    - newtype: ">=5.0.0 <6.0.0"
+    - prelude: ">=6.0.1 <7.0.0"
+    - strings: ">=6.0.1 <7.0.0"
+    - tuples: ">=7.0.0 <8.0.0"
   test:
     main: Test.Main
     dependencies:
