fix: libraries should not use package sets at all -> use solver

--- a/spago.yaml
+++ b/spago.yaml
@@ -20,7 +20,4 @@ package:
       - assert
       - console
       - effect
-workspace:
-  extraPackages: {}
-  packageSet:
-    registry: 60.5.0
+workspace: {}
